--- a/nanobrowse/templates/search/reps_online.html
+++ b/nanobrowse/templates/search/reps_online.html
@@ -1,22 +1,26 @@
-  <table class="mt-6">
-    <thead class="text-gray-400">
-      <td class="px-2">Online Weight</td>
-      <td class="px-2">Account</td>            
-    </thead>
-    <tbody>
-      {% for entry in reps_online %}
-      <tr class="divide-y divide-gray-400">
-          <!-- Vote weight -->
-        <td class=" text-sm whitespace-nowrap ">               
-          {{ entry['weight_formatted'] }}
-        </td>
-        <!-- Rep Account -->
-        <td class="px-4 py-2 text-sm">
-          <a href="{{ request.url_root }}account/{{ entry['account'] }}">
-            <b>{{ entry['account_formatted'] }}</b>                 
-          </a>
-        </td>
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>
+<table class="mt-6">
+  <thead class="text-gray-400">
+    <td></td>
+    <td class="px-2">Online Weight</td>    
+    <td class="px-2">Account</td>    
+    <td class="px-2">Version</td>
+    <td class="px-2">Uptime</td>
+  </thead>
+  <tbody>
+    {% for entry in reps_online %}
+    <tr class="divide-y divide-gray-600">  
+      <td></td>
+      <!-- Vote weight -->
+      <td class="text-sm px-2 py-2">{{ entry['weight_formatted'] }}</td>   
+      <!-- Rep Account -->
+      <td class="text-sm px-2 py-2">
+        <a href="{{ request.url_root }}account/{{ entry['account'] }}"><b>{{ entry['account_formatted'] }}</b></a>
+      </td>      
+      <!-- Rep Version -->
+      <td class="text-sm px-2 py-2">{{ entry['node_version'] }}</td>
+      <!-- Uptime -->
+      <td class="text-sm whitespace-nowrap px-2 py-2">{{ entry['node_uptime'] }}</td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
