--- a/nanobrowse/templates/block_viewer/send_receive.html
+++ b/nanobrowse/templates/block_viewer/send_receive.html
@@ -62,7 +62,7 @@
     </div>
       <p class="text-2xl font-bold text-center mb-6">{{ block_data.receive_block.amount_formatted }}</p>
       <span class="absolute bottom-2 left-2 bg-green-500 text-white text-xs px-2 py-1 rounded">
-        {{ block_data.send_block.status }}
+        {{ block_data.receive_block.status }}
       </span>
       <span class="absolute bottom-2 {{ block_data.receive_block.left_align }} text-black text-xs px-2 py-1">
         {{ block_data.receive_block.time_ago }}
