Add logo to nanobrowse

--- a/nanobrowse/templates/header/nanobrowse.html
+++ b/nanobrowse/templates/header/nanobrowse.html
@@ -1,3 +1,7 @@
-<div class="mt-4 flex items-center justify-center">
-      <h1 class="text-4xl"><a href="{{ request.url_root }}">nanoBrowse</a></h1>
-</div>
+<div class="flex items-center justify-center mt-4">
+      <img src="/static/nanobrowse_logo_128.png" class="h-10 mr-4" alt="nanoBrowse Logo"> <!-- Adjust the height as needed -->
+      <h1 class="text-4xl">
+          <a href="{{ request.url_root }}">nanoBrowse</a>
+      </h1>
+  </div>
+  
