--- a/nanobrowse/templates/account_viewer.html
+++ b/nanobrowse/templates/account_viewer.html
@@ -72,8 +72,13 @@
 
       {% include 'account_viewer/account_info.html' %}
 
-      <div class="mt-4 text-xs flex items-center justify-center space-x-2">
+      <div
+        id="tableSubBtns"
+        class="mt-4 text-xs flex items-center justify-center space-x-2">
         <button
+          id="groupedTransactionTableSubBtn"
+          data-default-color="bg-gray-800"
+          data-active-color="bg-blue-500"
           data-show-table="groupedTransactionTable"
           class="bg-gray-800 text-white px-3 py-1 rounded focus:outline-none"
         >
@@ -81,8 +86,11 @@
         </button>
 
         <button
+          id="transactionTableSubBtn"
+          data-default-color="bg-gray-800"
+          data-active-color="bg-blue-500"
           data-show-table="transactionTable"
-          class="bg-gray-800 text-white px-3 py-1 rounded focus:outline-none"
+          class="bg-blue-500 text-white px-3 py-1 rounded focus:outline-none"
         >
           Timeline
         </button>
