imp: Add tooltip for flow grouping

--- a/nanobrowse/templates/account_viewer.html
+++ b/nanobrowse/templates/account_viewer.html
@@ -81,6 +81,7 @@
           data-active-color="bg-blue-500"
           data-show-table="groupedTransactionTable"
           class="bg-gray-800 text-white px-3 py-1 rounded focus:outline-none"
+          title="Group transactions by type and account and sort by amount."
         >
           Grouped Flows
         </button>
